some change in explore section

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                         <img src="./assets/image/seeallrighticon.svg" class="img-fluid left" alt="Right arrow">
                     </div>
                 </div>
-                <div class="d-flex gap-xxl-6 gap-xl-3 gap-2 flex-column flex-lg-row flex-grow">
+                <div class="d-flex gap-xxl-6 gap-xl-3 gap-2 flex-lg-row flex-wrap flex-lg-nowrap">
                     <div class="hover-btn my-box active rounded-4">
                         <div class="hover-btn-1 rounded-pill bg-sucess non-1">
                             <div class="hover-btn-3 d-flex non-1 justify-content-center align-items-center rounded-pill "
@@ -436,7 +436,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info none ">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c1 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid w-100 h-100 rounded-4"
@@ -470,7 +470,7 @@
                                 Curabitur Egestas
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c2 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid w-100 h-100 rounded-4"
@@ -504,7 +504,7 @@
                                 Quisque Conseq…
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info  none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c3 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid w-100 h-100 rounded-3"
@@ -538,7 +538,7 @@
                                 Cras Convallis
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c4 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid w-100 h-100 rounded-4"
@@ -572,7 +572,7 @@
                                 Vestibulum fauci…
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c5 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid w-100 h-100 rounded-4"
@@ -606,7 +606,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c6 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -640,7 +640,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info none ">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c7 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -674,7 +674,7 @@
                                 Vestibulum fauci…
                             </div>
                         </div>
-                        <div class="card p-3 ms-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c8 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/food.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -716,18 +716,18 @@
                         <img src="./assets/image/seeallrighticon.svg" class="img-fluid left" alt="right-arrow">
                     </div>
                 </div>
-                <div class="d-flex gap-6 flex-column flex-lg-row ">
+                <div class="d-flex gap-xxl-6 gap-xl-3 gap-2 flex-lg-row flex-wrap flex-lg-nowrap">
                     <div class="hover-btn  active rounded-4">
                         <div class="hover-btn-1 rounded-pill bg-sucess non-1">
-                            <div class="hover-btn-3 d-flex  non-1 justify-content-center align-items-center  rounded-pill "
+                            <div class="hover-btn-3 d-flex  non-1 justify-content-center align-items-center rounded-pill "
                                 id="color-1">
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card p-3 me-4 rounded-5 border-info  none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c1 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
-                                    <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
+                                    <img src="./assets/image/night.jpg" class="img-fluid w-100 h-100 rounded-4"
                                         alt="mountain with star iamge">
                                 </div>
                                 <div class="col-md-7">
@@ -758,7 +758,7 @@
                                 Curabitur Egestas
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c2 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -792,7 +792,7 @@
                                 Quisque Conseq…
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c3 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -826,7 +826,7 @@
                                 Cras Convallis
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c4 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -860,7 +860,7 @@
                                 Vestibulum fauci…
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c5 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -894,7 +894,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info  none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c6 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -928,7 +928,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c7 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -962,7 +962,7 @@
                                 Vestibulum fauci…
                             </div>
                         </div>
-                        <div class="card ms-3 p-3 rounded-5 border-info  none">
+                        <div class="card p-xl-3 p-2 me-xl-4 ms-2 border-c8 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/night.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1004,7 +1004,7 @@
                         <img src="./assets/image/seeallrighticon.svg" class="img-fluid left" alt="right-arrow">
                     </div>
                 </div>
-                <div class="d-flex gap-6 flex-column flex-lg-row ">
+                <div class="d-flex gap-xxl-6 gap-xl-3 gap-2 flex-lg-row flex-wrap flex-lg-nowrap">
                     <div class="hover-btn  my-box active rounded-4">
                         <div class="hover-btn-1 rounded-pill bg-sucess non-1">
                             <div class="hover-btn-3 d-flex  non-1 justify-content-center align-items-center  rounded-pill "
@@ -1012,7 +1012,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c1 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1046,7 +1046,7 @@
                                 Curabitur Egestas
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info  none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c2 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1080,7 +1080,7 @@
                                 Quisque Conseq
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c3 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1114,7 +1114,7 @@
                                 Cras Convallis
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c4 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1148,7 +1148,7 @@
                                 Vestibulum fauci…
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c5 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1182,7 +1182,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c6 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1216,7 +1216,7 @@
                                 Ut Sed Eros
                             </div>
                         </div>
-                        <div class="card me-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 me-2 border-c7 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
                                     <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-4"
@@ -1250,10 +1250,10 @@
                                 Vestibulum fauci…
                             </div>
                         </div>
-                        <div class="card ms-4 p-3 rounded-5 border-info none">
+                        <div class="card p-xl-3 p-2 me-xl-4 ms-2 border-c8 rounded-5 none">
                             <div class="row g-0">
                                 <div class="col-md-5 pe-1">
-                                    <img src="./assets/image/water.jpg" class="img-fluid  w-100 h-100 rounded-3"
+                                    <img src="./assets/image/water.jpg" class="img-fluid w-100 h-100 rounded-3"
                                         alt="water iamge">
                                 </div>
                                 <div class="col-md-7">
