--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             <div class="container ">
                 <div class="row banner justify-content-between align-items-center  gy-2">
                     <div class="col-lg-5">
-                        <h1 class="one text-white pb-3 fw-bold"><span class="text-warning pe-2">Studying</span>Online is now
+                        <h1 class="one text-white pb-3 fw-bold"><span class="text-warning pe-2">Studying</span>Online is
+                            now
                             much
                             easier</h1>
                         <p class="fw-regular text-white">TOTC is an interesting platform that will teach you in more an
@@ -129,7 +130,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row g-2 flex-column flex-sm-row justify-content-evenly text-center mt-lg-6 mt-sm-4 mt-2 gy-3">
+                <div
+                    class="row g-2 flex-column flex-sm-row justify-content-evenly text-center mt-lg-6 mt-sm-4 mt-2 gy-3">
                     <div class="col">
                         <h2 class="gardient fw-light">15K+</h2>
                         <h3 class="text-dark fw-normal">Students</h3>
@@ -1284,7 +1286,7 @@
             <div class="container">
                 <div class="row justify-content-around gy-5">
                     <div class="col-lg-5 mx-auto">
-                        <p class="fw-regular mt-2 ps-3 ps-lg-0">--- TESTIMONIAL</p>
+                        <p class="fw-regular mt-2 ps-3 ps-lg-0 text-secondary">--- TESTIMONIAL</p>
                         <h2 class="text-primary-emphasis fw-bold mt-lg-5 mt-3 one">What They Say?</h2>
                         <p class="text-secondary fw-regular mt-lg-5">TOTC has got more than 100k positive ratings from
                             our
@@ -1413,56 +1415,62 @@
                         <a href="#" class="text-secondary">Read more</a>
                     </div>
                     <div class="col-lg-6">
-                        <div class="d-flex align-items-center flex-column flex-sm-row gy-3 gap-2 mb-lg-5 mb-3">
-                            <div class="col-lg-4 position-relative">
-                                <img src="./assets/image/agirl.png" class="img-fluid max" alt="A girl">
-                                <a href="#"
-                                    class="btn text-white fw-regular ps-1 pe-1 p-0 btn-primary rounded-pill position-absolute bottom-0 end-0">PRESS
-                                    RELEASE</a>
-                            </div>
-                            <div class="col-lg-7">
-                                <h4 class="h6 text-black fw-medium ">Class Technologies Inc. Closes $30
-                                    Million
-                                    Series A
-                                    Financing to
-                                    Meet High Demand</h4>
-                                <p class="text-secondary">Class Technologies Inc., the company that created
-                                    Class,...
-                                </p>
-                            </div>
-                        </div>
-                        <div class="d-flex gap-2 align-items-center flex-column flex-sm-row gy-3">
-                            <div class="col-lg-4 position-relative">
-                                <img src="./assets/image/zoommeating.png" class="img-fluid max" alt="zoommeating">
-                                <a href="#"
-                                    class="btn text-white fw-regular ps-1 pe-1 p-0  btn-primary rounded-pill position-absolute bottom-0 end-0">NEWS</a>
-                            </div>
-                            <div class="col-lg-7">
-                                <h4 class="h6 text-black fw-mediumm">Zoom’s earliest investors are
-                                    betting
-                                    millions on a
-                                    better Zoom
-                                    for schools</h4>
-                                <p class="text-secondary">Zoom was never created to be a consumer product.
-                                    Nonetheless,
-                                    the...</p>
+                        <div class="col-12">
+                            <div class="row align-items-center flex-column flex-sm-row gy-3 gap-2 mb-lg-5 mb-3">
+                                <div class="col-5 col-lg-4 position-relative">
+                                    <img src="./assets/image/agirl.png" class="img-fluid" alt="A girl">
+                                    <a href="#"
+                                        class="btn text-white fw-regular ps-1 pe-1 p-0 btn-primary rounded-pill position-absolute bottom-0 end-0">PRESS
+                                        RELEASE</a>
+                                </div>
+                                <div class="col-lg-7">
+                                    <h4 class="h6 text-black fw-medium ">Class Technologies Inc. Closes $30
+                                        Million
+                                        Series A
+                                        Financing to
+                                        Meet High Demand</h4>
+                                    <p class="text-secondary">Class Technologies Inc., the company that created
+                                        Class,...
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="d-flex gap-2 align-items-center flex-column flex-sm-row gy-3 mt-lg-5 mt-3">
-                            <div class="col-lg-4 position-relative">
-                                <img src="./assets/image/lmsfeature.png" class="img-fluid max" alt="lmsfeature">
-                                <a href="#"
-                                    class="btn text-white fw-regular ps-1 pe-1 p-0  btn-primary rounded-pill position-absolute bottom-0 end-0">NEWS</a>
+                        <div class="col-12">
+                            <div class="row gy-3 gap-2 align-items-center flex-column flex-sm-row mb-lg-5 mb-3">
+                                <div class="col-5 col-lg-4 position-relative">
+                                    <img src="./assets/image/zoommeating.png" class="img-fluid" alt="zoommeating">
+                                    <a href="#"
+                                        class="btn text-white fw-regular ps-1 pe-1 p-0 btn-primary rounded-pill position-absolute bottom-0 end-0">NEWS</a>
+                                </div>
+                                <div class="col-lg-7">
+                                    <h4 class="h6 text-black fw-mediumm">Zoom’s earliest investors are
+                                        betting
+                                        millions on a
+                                        better Zoom
+                                        for schools</h4>
+                                    <p class="text-secondary">Zoom was never created to be a consumer product.
+                                        Nonetheless,
+                                        the...</p>
+                                </div>
                             </div>
-                            <div class="col-lg-7">
-                                <h4 class="h6 text-black fw-medium">Former Blackboard CEO Raises $16M to
-                                    Bring LMS
-                                    Features
-                                    to Zoom
-                                    Classrooms</h4>
-                                <p class="text-secondary">This year, investors have reaped big financial returns
-                                    from
-                                    betting on Zoom...</p>
+                        </div>
+                        <div class="col-12">
+                            <div class="row gap-2 align-items-center flex-column flex-sm-row gy-3">
+                                <div class="col-5 col-lg-4 position-relative">
+                                    <img src="./assets/image/lmsfeature.png" class="img-fluid" alt="lmsfeature">
+                                    <a href="#"
+                                        class="btn text-white fw-regular ps-1 pe-1 p-0  btn-primary rounded-pill position-absolute bottom-0 end-0">NEWS</a>
+                                </div>
+                                <div class="col-lg-7">
+                                    <h4 class="h6 text-black fw-medium">Former Blackboard CEO Raises $16M to
+                                        Bring LMS
+                                        Features
+                                        to Zoom
+                                        Classrooms</h4>
+                                    <p class="text-secondary">This year, investors have reaped big financial returns
+                                        from
+                                        betting on Zoom...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
